# agent-skills

./: .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  CONTRIBUTING_SKILLS.md  GEMINI.md  README.md  install.sh  pack_skills.sh  toml_to_claude_cmd.sh
cocotb-verilator-tests/: SKILL.md
cocotb-verilator-tests/assets/templates/: Makefile  conftest.py  runner.py  test_dut.py
cocotb-verilator-tests/references/: cocotb-style-guide.md
release-management/: SKILL.md
release-management/commands/: repo-release.toml
scripts/: pack_skills.sh  toml_to_codex_cmd.sh
skills/cocotb-verilator-tests/: SKILL.md
skills/cocotb-verilator-tests/commands/: cocotb-test-review.toml
skills/cocotb-verilator-tests/references/: cocotb-style-guide.md
skills/release-management/: SKILL.md
skills/release-management/commands/: repo-release.toml
skills/systemverilog-core/: SKILL.md
skills/systemverilog-core/commands/: sv-clean-code.toml  sv-gen.toml  sv-style-check.toml  sv-synth-check.toml
skills/systemverilog-core/references/: style-guide.md
skills/systemverilog-tests/: SKILL.md
skills/systemverilog-tests/commands/: sv-test-review.toml
skills/systemverilog-tests/references/: test-style-guide.md  verilator-compatibility.md
skills/verilator/: SKILL.md
skills/verilator-cmake/: SKILL.md
skills/verilator-cmake/references/: cmake-style-guide.md
skills/verilator-simflow/: SKILL.md
skills/verilator-simflow/references/: regression-best-practices.md  simulation-workflow.md
skills/verilator/commands/: sv-verilator-check.toml
systemverilog-core/: SKILL.md
systemverilog-core/assets/templates/: example_fifo.sv  fsm_2_always_comb.sv  fsm_3_always_reg.sv  fsm_4_always_reg.sv  fsm_template.sv  interface_template.sv  module_basic.sv
systemverilog-core/commands/: sv-clean-code.toml  sv-gen.toml  sv-style-check.toml  sv-sva-check.toml  sv-synth-check.toml
systemverilog-core/references/: style-guide.md
systemverilog-tests/: SKILL.md
systemverilog-tests/references/: test-style-guide.md  verilator-compatibility.md
verilator/: SKILL.md
verilator-cmake/: SKILL.md
verilator-cmake/assets/templates/: CMakeLists.txt  sim_main.cpp
verilator-cmake/references/: cmake-build-notes.md
verilator-simflow/: SKILL.md
verilator-simflow/references/: waveform-guidelines.md
verilator/commands/: sv-verilator-check.toml
(+20 files in other folders)
